# ArrTheAudio

./: .env.example  .gitignore  DOCKER_QUICKSTART.md  Dockerfile  Dockerfile.test  LICENSE  Makefile  README.md  WEBHOOK_SETUP.md  audio-default-track-fixer-plan.md  config.yaml.example  docker-compose.yml  pyproject.toml  requirements-prod.txt  requirements.txt
.claude/: settings.local.json
.github/: CONTRIBUTING.md  PULL_REQUEST_TEMPLATE.md  dependabot.yml
.github/ISSUE_TEMPLATE/: bug_report.md  config.yml  feature_request.md
.github/workflows/: release.yml  test.yml
config/: config-dryrun.yaml
docs/: TECHNICAL_DEBT.md
docs/phases/: PHASE_3_TMDB_INTEGRATION.md  PHASE_4_MP4_SUPPORT.md  PHASE_5_BATCH_PROCESSING_API.md  PHASE_6_PRODUCTION_HARDENING.md  README.md
scripts/: docker-run.sh  test-radarr-webhook.sh  test-sonarr-webhook.sh  test-webhook.sh
src/arrtheaudio/: __init__.py  __main__.py  cli.py  config.py  daemon.py
src/arrtheaudio/api/: app.py  job_routes.py  middleware.py  models.py  routes.py
src/arrtheaudio/core/: analyzer.py  database.py  detector.py  executor.py  job_models.py  pipeline.py  queue_manager.py  scanner.py  selector.py  worker_pool.py
src/arrtheaudio/metadata/: __init__.py  arr.py  cache.py  heuristic.py  resolver.py  tmdb.py
src/arrtheaudio/models/: file.py  metadata.py  track.py
src/arrtheaudio/utils/: logger.py  (+2 more)
tests/: conftest.py
tests/integration/: test_job_apis.py  test_multifile_webhook.py  test_webhook.py
tests/unit/: test_database.py  test_executor.py  test_job_models.py  test_queue_manager.py  test_selector.py
